# learn-engine-dev

./: .gitignore  404.html  CMakeLists.txt  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
2.engine_api/about/: index.html
3.games/about/: index.html
docs/: index.md
docs/1.game_loop/: hello_loop.md
docs/embedding_python/: custom_python_module.md  embedding_further.md  hello_python.md
docs/engine_api/: about.md
docs/entity_component_system/: building_an_ecs.md
docs/game_loop/: hello_loop.md
docs/game_loop_and_sdl/: game_loop_introduction.md  initialize_sdl.md
docs/getting_started/: embedding_python.md
docs/implementing_audio/: using_sdl_mixer.md
docs/input_management/: input_events.md  input_management.md
docs/opengl_rendering/: asset_management.md  creating_a_renderer.md  rendering_sprites.md  rendering_text.md
docs/serializing_with_json/: parsing_json.md  parsing_json_properties_file.md
docs/source_code/: source_code.md
docs/theme/: main.html
embedding_python/custom_python_module/: index.html
embedding_python/embedding_further/: index.html
embedding_python/hello_python/: index.html
engine_api/about/: index.html
entity_component_system/building_an_ecs/: index.html
game_loop_and_sdl/game_loop_introduction/: index.html
game_loop_and_sdl/initialize_sdl/: index.html
games/about/: index.html
search/: search_index.json
src2/: main.c
src2/1.game_loop/: CMakeLists.txt  engine.c  engine.h  main.c
theme/: main.html
tutorial/1.game_loop/: CMakeLists.txt
tutorial/1.game_loop/src/: engine.c  engine.h  main.c
(+354 files in other folders)
